Foundation for add reading on the Apple Watch app

--- a/SugarTraces WatchKit App/Base.lproj/Interface.storyboard
+++ b/SugarTraces WatchKit App/Base.lproj/Interface.storyboard
@@ -45,18 +45,27 @@
         <!--Back-->
         <scene sceneID="fHk-Af-fm7">
             <objects>
-                <controller title="Back" id="sXI-8g-RVH">
+                <controller title="Back" id="sXI-8g-RVH" customClass="AddReadingController" customModule="SugarTraces_WatchKit_Extension">
                     <items>
                         <label alignment="center" text="Add Reading" id="PaT-LB-DuG">
                             <color key="textColor" red="0.1333333333" green="0.71372549019999998" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                         </label>
-                        <textField width="1" alignment="center" placeholder="mg/DL" textContentType="name" id="PpK-PN-4uy"/>
-                        <button width="1" alignment="left" title="Enter" id="mCV-98-Xgh"/>
+                        <label width="1" height="39" alignment="center" text="Type down your reading!" textAlignment="center" numberOfLines="0" minimumScaleFactor="0.5" id="4jH-5A-Uss">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </label>
+                        <textField width="1" alignment="center" placeholder="mg/DL" textContentType="name" id="PpK-PN-4uy">
+                            <connections>
+                                <action selector="textField:" destination="sXI-8g-RVH" id="7W3-we-MB8"/>
+                            </connections>
+                        </textField>
                     </items>
+                    <connections>
+                        <outlet property="readingTextField" destination="PpK-PN-4uy" id="VZ9-dM-C7c"/>
+                    </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="-497" y="746"/>
+            <point key="canvasLocation" x="-497" y="746.5"/>
         </scene>
         <!--SugarTraces-->
         <scene sceneID="L9Q-jp-f9S">
